testing how to implement the cv form + cv visualization at the same time using components, not sure if the same component should be responsible for rendering the form and the cv visualization

--- a/cv-app/src/styles/App.css
+++ b/cv-app/src/styles/App.css
@@ -1,3 +1,20 @@
+* {
+    margin: 3px;
+}
+
 .App {
-    text-align: center;
+    text-align: left;
+
+}
+
+.cvForm, .formDiv {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 50%;
+}
+
+input {
+    margin: 2px;
+    font-size: large;
 }
