started prototyping how the preview elements will work and be displayed.

--- a/cv-app/src/styles/App.css
+++ b/cv-app/src/styles/App.css
@@ -4,6 +4,8 @@
 
 .App {
     text-align: left;
+    display: grid;
+    grid-auto-flow: column;
 
 }
 
@@ -17,4 +19,9 @@
 input {
     margin: 2px;
     font-size: large;
+}
+
+.preview {
+    border: 1px solid red;
+    padding: 15px;
 }
