--- a/cv-app/src/styles/App.css
+++ b/cv-app/src/styles/App.css
@@ -7,6 +7,11 @@
     src: url(/src/fonts/UbuntuCondensed-Regular.ttf);
 }
 
+@font-face {
+    font-family: previewFont;
+    src: url(/src/fonts/Abel-Regular.ttf);
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -35,7 +40,7 @@ input {
 }
 
 .bodyTitle {
-    color: rgb(221, 221, 221);
+    color:  rgb(0, 0, 0);
     max-width: 600px;
     min-width: 300px;
     display: flex;
@@ -43,12 +48,14 @@ input {
 
 }
 
-.sideBar {
-    color: rgb(221, 221, 221);
+.sideBar, .sideBarSkills {
+    color: rgb(0, 0, 0);
     display: flex;
     align-items: left;
 
 }
+
+
 textarea {
     max-width: 400px;
     min-width: 300px;
@@ -56,7 +63,6 @@ textarea {
     min-height: 80px;
     border: none;
     margin-top: 2px;
-
     color: rgb(221, 221, 221);
     background-color: rgb(78, 78, 78);
 }
@@ -134,6 +140,7 @@ button:hover span:after {
     margin: 0px;
     max-width: 300px;
     min-width: 300px;
+    color:  rgb(221, 221, 221);
     
 }
 
@@ -143,6 +150,7 @@ button:hover span:after {
     padding-bottom: 5px;
     min-width: 310px;
     margin: 0px;
+    color:  rgb(221, 221, 221);
     
 }
 
@@ -161,26 +169,43 @@ input {
     margin-right: 10px;
     border: 1px #D3D3D3 solid;
     border-radius: 5px;
-    background: white;
+    background: rgb(235, 235, 235);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    font-family: previewFont;
+    font-size: 110%;
+    
 }
 
 #profileExpContainer {
-    border: 1px solid purple;
     margin: auto;
     max-width: 79%;
     min-width: 79%;
+    margin-top: 0px;
 }
 
 #prevBody {
     display: flex;
     margin: 0px;
     padding: 0px;
-    border: 1px solid yellow;
+    color:black;
 }
 
 #prevSideBar {
     min-width:19%;
     max-width:19%;
     word-wrap: break-word;
+    border-right: 1px solid rgb(183, 183, 183);
+    margin: 0px;
+}
+
+.sideBar {
+    font-size: 110%;
+    
+}
+
+.sideBarSkills {
+    border-top: 1px solid rgb(183, 183, 183);
+    font-size: 110%;
+    padding-top: 10px;
+    
 }
