--- a/cv-app/src/styles/EducPreviewStyle.css
+++ b/cv-app/src/styles/EducPreviewStyle.css
@@ -1,10 +1,14 @@
 #educContainer {
-    font-size: small;
+    font-size: 90%;
+    margin: 1px;
+    margin-bottom: 15px;
+
+
     
-    margin-bottom: 10px;
 
 }
 
 #dates {
     display: flex;
+    font-size: 80%;
 }
